# catkin_ws_remote

./: .gitignore  README.md  Software_command.md  Troubleshooting_doc.md  launch.launch  test3.csv
PosterOnAlgo/: plot.py
PosterOnAlgo/data proc/: gait detection.py
PosterOnAlgo/fast/: linear_moments.csv  result.csv  step in snesing.csv
PosterOnAlgo/medium/: plot.py
PosterOnAlgo/slow/: bag_proccessing.py  sensing_topic.csv
data/: N0CW1M2nd.bag  delete.bag  test.bag
data/ISB_2023_data/: bag_proccessing_kn.py
data/ISB_2023_data/data_kn/: europa_topic_test_0_180_med.bag.csv  europa_topic_test_0_180_slow.bag.csv  europa_topic_test_10_0_fast.bag.csv  europa_topic_test_10_0_slow.bag.csv  europa_topic_test_10_180_fast.bag.csv  europa_topic_test_10_180_med.bag.csv  europa_topic_test_10_90_fast.bag.csv  europa_topic_test_10_n90_slow.bag.csv
data/May-19-v1/: short_test.bag
data/May-19-v1/short_test/: motor_command.csv  motor_listen.csv  region_motor.pickle
data/PosterOnAlgo/data proc/: delays.xlsx  europa_topic.csv  gait detection_stepdiv.py  linear_moments.csv  sensing_topic.csv  xsens_com.csv
data/PosterOnAlgo/fast/: accel and europa.csv  angular_moments.csv  bag_proccessing.py  europa_topic.csv  plot.py  sensing_topic.csv  step in europa.csv  test_0_180_fast.bag  xsens_joint_angle.csv
data/PosterOnAlgo/medium/: angular_moments.csv  bag_proccessing.py  europa_topic.csv  gait detection.py  linear_moments.csv  result.csv  sensing_topic.csv  xsens_com.csv  xsens_joint_angle.csv
data/PosterOnAlgo/slow/: angular_moments.csv  europa_topic.csv  linear_moments.csv  plot.py  result.csv  test_0_180_slow.bag  xsens_com.csv  xsens_joint_angle.csv
data/circle_walk/: data_test.bag  test.csv
data/for_bags/: angular_moments.csv  bag_proccessing_kn.py  europa_topic.csv  gait detection.py  linear_moments.csv  result.csv  sensing_topic.csv  test_0_180_slow.bag  test_0_189_med.bag  test_10_0_fast.bag  test_10_0_med.bag  test_10_180_fast.bag  test_10_180_med.bag  test_10_180_slow.bag  test_10_90_slow.bag  test_10_n90_fast.bag  test_10_n90_slow.bag  test_hang.bag  xsens_com.csv  xsens_joint_angle.csv
data/for_bags/data_kn/: europa_topic_test_0_180_fast.bag.csv  europa_topic_test_10_0_med.bag.csv  europa_topic_test_10_180_slow.bag.csv  europa_topic_test_10_90_med.bag.csv  europa_topic_test_10_90_slow.bag.csv  europa_topic_test_10_n90_med.bag.csv  file_line.html  file_polar.html  sensing_topic_test_0_180_fast.bag.csv  sensing_topic_test_0_180_med.bag.csv  sensing_topic_test_0_180_slow.bag.csv  xsens_com.csv  (+13 more)
data/for_bags_2/: graph_multi_topic_kn.py  test01.bag  test_hang0.bag  test_neutral_fast0.bag  test_neutral_med0.bag  test_neutral_slow0.bag  test_stand0.bag
data/for_bags_2_rr/: expt1_v2.bag  graph_multi_topic_kn.py  motor_analysis_rr.py  motor_listen.csv  motorcheck.bag  motorcheck1.bag  smoothcheck4.bag
data/motor_integration_tests/: europa_topic2.csv  motor_command.csv  motor_command2.csv  motor_listen.csv  motor_listen2.csv  sensing_topic2.csv  test1.bag  test2.bag
data/motor_test/: TADA_v1_analysis.py  motor_analysis.py
data/subj1/: test.bag  test.bag.active  test_walk.bag  test_walk_motor_listen.csv
data/tada_p1/: P01I002S250.bag  P01I05S250.bag  P02I01S250.bag  P1I01S1000.bag  P1I01S125.bag.active  P1I01S250.bag  P1I01S500.bag  P5I01S250.bag  figure7.html  tada_p1_analysis.py  tada_p1_analysis_short.py
data/tada_p2/: test.bag  test_stand.bag
data/tada_v1_pilot_data/: europa_topic.csv  graph_multi_topic_kn.py  graph_multi_topic_sa.py  motor_command.csv  region_data.pickle
data/tada_v2_pilot/: pilot_expt3_mini.bag
devel/: .catkin  .rosinstall  env.bat  setup.bat
for_bags/: bag_proccessing.py  bag_proccessing_kn.py  bag_proccessing_kn_multiple_topics.py  test_0_180_med.bag.active  test_10_0_slow.bag  test_10_90_fast.bag  test_10_90_med.bag  test_10_n90_med.bag
for_bags/data_kn/: europa_topic_test_10_n90_fast.bag.csv  europa_topic_test_hang.bag.csv  file_line.html
src/: CMakeLists.txt
src/.talker_listener_cpp/: CMakeLists.txt  package.xml
src/ros_tutorials_topic-master/: CMakeLists.txt
src/ros_tutorials_topic-master/src/: topic_publisher.cpp  topic_subscriber.cpp
src/streaming_protocol/: CMakeLists.txt  CMakeLists.txt.bak.txt  README.md  angularsegmentkinematicsdatagram.cpp  angularsegmentkinematicsdatagram.h  centerofmassdatagram.cpp  copyright.txt  datagram.cpp  eulerdatagram.cpp  eulerdatagram.h  jointanglesdatagram.cpp  jointanglesdatagram.h  linearsegmentkinematicsdatagram.cpp  linearsegmentkinematicsdatagram.h  main.cpp  metadatagram.cpp  metadatagram.h  parsermanager.cpp  positiondatagram.cpp  quaterniondatagram.cpp  quaterniondatagram.h  scaledatagram.cpp  scaledatagram.h  streamer.cpp  streamer.h  timecodedatagram.cpp  trackerkinematicsdatagram.cpp  udpserver.cpp  udpserver.h
src/streaming_protocol/include/: centerofmassdatagram.h  datagram.h  parsermanager.h  positiondatagram.h  timecodedatagram.h  trackerkinematicsdatagram.h  udpserver.h  xstypes.h
src/streaming_protocol/include/xstypes/: pstdint.h  xsanalogindata.h  xsarray.h  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbusid.h  xsbytearray.h  xscalibrateddata.h  xscanbaudcode.h  xscanconfigidentifier.h  xscandataidentifier.h  xscanframeformat.h  xscanoutputconfiguration.h  xscanoutputconfigurationarray.h  xscontrolline.h  xscopy.h  xsdataidentifier.h  xsdataidentifiervalue.h  xsdatapacket.h  xsdatapacketptr.h  xsdatapacketptrarray.h  xsdebugcounters.h  xsdevicecapabilities.h  xsdeviceid.h  xsdeviceidarray.h  xsdeviceoptionflag.h  xsdid.h  xseuler.h  xsexception.h  xsfile.h  xsfilepos.h  xsfilterprofile.h  xsfilterprofilearray.h  xsfilterprofilekind.h  xsfloatmath.h  xsglovedata.h  xsglovesnapshot.h  xshandid.h  xsinforequest.h  (+60 more)
src/talker_listener/: CMakeLists.txt
work up on data 2/fast/: bag_proccessing.py  europa_topic.csv  plot.py  result.csv  sensing_topic.csv
work up on data 2/medium/: bag_proccessing.py  europa_topic.csv  plot.py  result.csv  sensing_topic.csv
work up on data 2/slow/: bag_proccessing.py  europa_topic.csv  plot.py  result.csv  sensing_topic.csv
(+647 files in other folders)
